<resources>
    <string name="app_name">IntentActivityPractice</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="food">Food</string>
    <string name="drink">Drink</string>
    <string name="paylater">PayLater</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="cash">Cash</string>
    <string name="submit_intent">Submit (Intent)</string>
    <string name="reset">Reset</string>
    <string name="data_view">Data View</string>
    <string name="appetites">Appetites</string>
    <string name="payment">Payment</string>
    <string name="submit_bundle">Submit (Bundle)</string>
    <string name="buka_web">Buka Web</string>
    <string name="telepon">Telepon</string>
    <string name="test_api">Test API</string>
</resources>