<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="128dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/et_name"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/et_age"
        app:layout_constraintTop_toBottomOf="@+id/et_age" />

    <CheckBox
        android:id="@+id/cb_food"
        android:layout_width="135dp"
        android:layout_height="41dp"
        android:layout_marginStart="-20dp"
        android:layout_marginTop="8dp"
        android:hint="@string/food"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <CheckBox
        android:id="@+id/cb_drink"
        android:layout_width="135dp"
        android:layout_height="41dp"
        android:hint="@string/drink"
        app:layout_constraintStart_toStartOf="@+id/cb_food"
        app:layout_constraintTop_toBottomOf="@+id/cb_food" />

    <RadioGroup
        android:id="@+id/rg_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        app:layout_constraintTop_toBottomOf="@+id/cb_drink">

        <RadioButton
            android:id="@+id/rb_paylater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paylater" />

        <RadioButton
            android:id="@+id/rb_ewallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/e_wallet" />

        <RadioButton
            android:id="@+id/rb_cash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cash" />

    </RadioGroup>

    <Button
        android:id="@+id/butt_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/test_api"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_payment" />

    <Button
        android:id="@+id/butt_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_bundle"
        app:layout_constraintEnd_toEndOf="@+id/butt_submit"
        app:layout_constraintStart_toStartOf="@+id/butt_submit"
        app:layout_constraintTop_toBottomOf="@+id/butt_submit" />

    <Button
        android:id="@+id/butt_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buka_web"
        app:layout_constraintEnd_toEndOf="@+id/butt_reset"
        app:layout_constraintStart_toStartOf="@+id/butt_reset"
        app:layout_constraintTop_toBottomOf="@+id/butt_reset" />

    <Button
        android:id="@+id/butt_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telepon"
        app:layout_constraintEnd_toEndOf="@+id/butt_web"
        app:layout_constraintStart_toStartOf="@+id/butt_web"
        app:layout_constraintTop_toBottomOf="@+id/butt_web" />

    <TextView
        android:id="@+id/tv_apiresponse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/cb_food"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <Button
        android:id="@+id/butt_externalstorage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test External Storage"
        app:layout_constraintEnd_toEndOf="@+id/butt_tel"
        app:layout_constraintStart_toStartOf="@+id/butt_tel"
        app:layout_constraintTop_toBottomOf="@+id/butt_tel" />

</androidx.constraintlayout.widget.ConstraintLayout>